Fix: add gap between form and btn

--- a/src/pages/CompleteSignUp/CompleteSignUp.module.scss
+++ b/src/pages/CompleteSignUp/CompleteSignUp.module.scss
@@ -65,6 +65,12 @@
   gap: 30px;
 }
 
+.containerRight {
+  display: flex;
+  flex-direction: column;
+  gap: 100px;
+}
+
 .primaryBackground{
   background: #3e49fb;
   height: 100vh;
@@ -93,7 +99,6 @@
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
-  gap: 20px;
 }
 
 .divider {
